Fix layout issues

--- a/note-ninja-client/src/components/Notes/Note.css
+++ b/note-ninja-client/src/components/Notes/Note.css
@@ -79,21 +79,20 @@
 .note-editor .note-title {
   display: block;
   width: 100%;
-  padding: 15px 0;
+  margin: 15px 0 20px 0;
+  padding: 0;
   font-size: 38px;
   border: 0;
-  margin: 0;
   outline: none !important;
   flex: 0;
-  padding-bottom: 20px;
 }
 .note-editor .note-body {
-  margin-bottom: 165px;
+  padding-bottom: 100px;
   outline: none !important;
   cursor: text;
   line-height: 1.7;
   font-size: 18px;
-  height: calc(100vh - 297px);
+  min-height: calc(100vh - 297px);
   position: relative;
   cursor: text;
 }
